--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     </head>
     <body>
         <h1>
-            Hello World 1312
+            About me
         </h1>
+        <h2>
+            My Name is zaki hehe, how are you?
+        </h2>
     </body>
 </html>
