--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> M.Zaki 12</title>
+        <title> M.Zaki</title>
     </head>
     <body>
         <h1>
             About me
         </h1>
         <h2>
-            My Name is zaki hehe, how are you?
+            Muhammad Zaki
         </h2>
+
+        <h3>
+            Aku suka menyelesaikan suatu masalah yang berkaitan erat dengan bisnis, selain itu, saya seseorang yang memiliki ambisi tinggi untuk mencapai tujuan yang ditetapkan
+        </h3> 
     </body>
 </html>
