--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>
-            About me
+            About me             My Contact               My Portofolio              
         </h1>
         <h2>
             Muhammad Zaki
